Added TimedLog and Log Property

--- a/VtlSoftware.Logging/VtlSoftware.Logging.csproj
+++ b/VtlSoftware.Logging/VtlSoftware.Logging.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Metalama.Extensions.DependencyInjection" Version="2023.0.117" />
-    <PackageReference Include="Metalama.Framework" Version="2023.0.117" />
+    <PackageReference Include="Metalama.Extensions.DependencyInjection" Version="2023.1.5-preview" />
+    <PackageReference Include="Metalama.Framework" Version="2023.1.5-preview" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
   </ItemGroup>
 
