Adjusted the handling of pure string messages being sent to the logger

--- a/VtlSoftware.Logging.Tests/VtlSoftware.Logging.Tests.csproj
+++ b/VtlSoftware.Logging.Tests/VtlSoftware.Logging.Tests.csproj
@@ -14,6 +14,7 @@
     <Compile Include="PropertyTest.t.cs" />
     <Compile Include="PropertyTest.t.cs" />
     <Compile Include="VoidMethodTest.t.cs" />
+    <Compile Include="VoidMethodTest.t.cs" />
   </ItemGroup>
 
   <ItemGroup>
