Improved the property logger and new fabric tests added

--- a/VtlSoftware.Logging.Tests/VtlSoftware.Logging.Tests.csproj
+++ b/VtlSoftware.Logging.Tests/VtlSoftware.Logging.Tests.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="DoNotLogAllPublicMethodsInNoLogClassTest.t.cs" />
+    <Compile Include="LogAllPublicMethodsTest1.t.cs" />
+    <Compile Include="LoggingPublicNonStaticMethodsOnlyTest.t.cs" />
     <Compile Include="MethodTest.t.cs" />
     <Compile Include="MethodWithParamsTest.t.cs" />
     <Compile Include="MethodWithParamsTest.t.cs" />
